--- a/modules/apps/foundation/portal-search/portal-search-web/src/main/resources/META-INF/resources/main_search_result_form.jspf
+++ b/modules/apps/foundation/portal-search/portal-search-web/src/main/resources/META-INF/resources/main_search_result_form.jspf
@@ -56,7 +56,7 @@ AssetEntry assetEntry = AssetEntryLocalServiceUtil.fetchEntry(className, classPK
 			Locale summaryLocale = summary.getLocale();
 			%>
 
-			<liferay-ui:icon image='<%= "../language/" + LocaleUtil.toLanguageId(summaryLocale) %>' message='<%= LanguageUtil.format(request, "this-result-comes-from-the-x-version-of-this-content", summaryLocale.getDisplayLanguage(locale), false) %>' />
+			<liferay-ui:icon escape="<%=false %>" image='<%= "../language/" + LocaleUtil.toLanguageId(summaryLocale) %>' message='<%= LanguageUtil.format(request, "this-result-comes-from-the-x-version-of-this-content", summaryLocale.getDisplayLanguage(locale), false) %>' />
 		</c:if>
 	</h6>
 
