--- a/modules/apps/web-experience/asset/asset-publisher-web/src/main/resources/META-INF/resources/asset_export.jspf
+++ b/modules/apps/web-experience/asset/asset-publisher-web/src/main/resources/META-INF/resources/asset_export.jspf
@@ -28,6 +28,7 @@ exportAssetURL.setWindowState(LiferayWindowState.EXCLUSIVE);
 	%>
 
 		<liferay-ui:icon
+			escape="<%= escape %>"
 			iconCssClass="<%= DLUtil.getFileIconCssClass(extension) %>"
 			label="<%= true %>"
 			message='<%= LanguageUtil.format(request, "x-convert-x-to-x", new Object[] {"hide-accessible", assetRenderer.getTitle(locale), StringUtil.toUpperCase(HtmlUtil.escape(extension))}, false) %>'
