--- a/modules/apps/web-experience/asset/asset-publisher-web/src/main/resources/META-INF/resources/asset_print.jspf
+++ b/modules/apps/web-experience/asset/asset-publisher-web/src/main/resources/META-INF/resources/asset_print.jspf
@@ -38,6 +38,7 @@ printAssetURL.setWindowState(LiferayWindowState.POP_UP);
 	<c:when test="<%= print %>">
 		<liferay-ui:icon
 			icon="print"
+			escape="<%= false %>"
 			label="<%= true %>"
 			markupView="lexicon"
 			message='<%= LanguageUtil.format(request, "print-x-x", new Object[] {"hide-accessible", HtmlUtil.escape(assetRenderer.getTitle(locale))}, false) %>'
@@ -51,6 +52,7 @@ printAssetURL.setWindowState(LiferayWindowState.POP_UP);
 	<c:otherwise>
 		<liferay-ui:icon
 			icon="print"
+			escape="<%= false %>"
 			label="<%= true %>"
 			markupView="lexicon"
 			message='<%= LanguageUtil.format(request, "print-x-x", new Object[] {"hide-accessible", HtmlUtil.escape(assetRenderer.getTitle(locale))}, false) %>'
